--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: FRNDS: An App Development Project
 
 # Your name to show in the footer
-author: Some Person
+author: Aanya, Aashna, Jacob
 
 # --- List of links in the navigation bar --- #
 
@@ -99,17 +99,17 @@ post_search: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+navbar-col: "#ffe9ec"
+navbar-text-col: "#ff8396"
+navbar-border-col: "#ff8396"
+page-col: "#FFFFF"
+text-col: "#ff8396"
+link-col: "#ff6a80"
+hover-col: "#e75480"
+footer-col: "#ffe9ec"
+footer-text-col: "#ff8396"
+footer-link-col: "#ff6a80"
+footer-hover-col: "#e75480"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
