--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,7 @@ author: Aanya, Aashna, Jacob
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
-  Team Contract: "teamcontract"
-  Group Project Proposal: "groupprojprop"
+  About Us: "aboutme"
 
 # --- Logo --- #
 
