--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: FRNDS: An App Development Project
+title: FRNDS
 
 # Your name to show in the footer
 author: Aanya, Aashna, Jacob
