--- a/_config.yml
+++ b/_config.yml
@@ -103,11 +103,11 @@ navbar-border-col: "#ff1493"
 page-col: "#FFFFF"
 text-col: "#ff1493"
 link-col: "#ff69b4"
-hover-col: "#f400a1"
+hover-col: "#d70a53"
 footer-col: "#ffddf4"
 footer-text-col: "#ff1493"
 footer-link-col: "#ff69b4"
-footer-hover-col: "#f400a1"
+footer-hover-col: "#d70a53"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
