--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Aanya, Aashna, Jacob
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Us: "aboutme.md"
+  About Us: "aboutme"
 
 # --- Logo --- #
 
