--- a/_config.yml
+++ b/_config.yml
@@ -98,14 +98,14 @@ post_search: true
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#ffddf4"
-navbar-text-col: "#ff1493"
-navbar-border-col: "#ff1493"
+navbar-text-col: "#fc5a8d"
+navbar-border-col: "#fc5a8d"
 page-col: "#FFFFF"
-text-col: "#ff1493"
+text-col: "#fc5a8d"
 link-col: "#ff69b4"
 hover-col: "#d70a53"
 footer-col: "#ffddf4"
-footer-text-col: "#ff1493"
+footer-text-col: "#fc5a8d"
 footer-link-col: "#ff69b4"
 footer-hover-col: "#d70a53"
 
